--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ server:
   eureka:
     instance:
       preferIpAddress: true
-      hostname: ${HOSTNAME:http://eureka-server:8761/eureka}
+      hostname: ${HOSTNAME:localhost}
 
     client:
       registerWithEureka: true
       fetchRegistry: true
       serviceUrl:
-        defaultZone: ${EUREKA_URL:http://eureka-server:8761/eureka}
+        defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
 
 spring:
   application:
